Add events controller (#16)
